# hr_interview_evaluator

./: Dockerfile  LICENSE  README.md  app.py  env.py  grader.py  inference.py  openenv.yaml  pyproject.toml  tasks.py
server/: app.py
