[project]
name = "hr-interview-evaluator"
version = "0.1.0"
description = "OpenEnv HR Interview Evaluator"
authors = [{name = "Meenu"}]

dependencies = [
    "openenv-core>=0.2.0",
    "fastapi",
    "uvicorn"
]

[project.scripts]
start = "server.app:app"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
